# cpu-raytracer

./: CMakeLists.txt  README.md  devr.sh  nvim.session  nvims.session
src/: icollidable.h  light.cpp  light.h  main.cpp  poly.cpp  poly.h  rays.cpp  rays.h  sphere.cpp  sphere.h  structdefs.h  tonemapping.cpp  tonemapping.h
